# toolcase

./: .gitignore  Dockerfile  Makefile  mypy.ini  readme.md  ruff.toml  run.sh  run_app.sh  task.sh
.github/workflows/: apps.yml
apps/my_cool_app/: main.py  pyproject.toml
apps/tool1/: main.py  pyproject.toml
apps/tool2/: main.py  pyproject.toml  utils.py
apps/tool3/: main.py  pyproject.toml  utils.py
